Added connected some backend info with the front-end

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,4 +1,4 @@
 <%- layout('layouts/boiler') %>
 <div>
-    <p class="font-bold text-2xl text-green-500">BOOKED SUCCESSFULLY</p>
+    <p class="font-bold text-2xl text-green-500 flex justify-center items-center">BOOKED SUCCESSFULLY</p>
 </div>
