--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -111,7 +111,7 @@
                         </p>
                         <span
                             class="inline-flex items-center justify-center w-8 h-8 mt-2 text-sm font-medium text-orange-500 bg-orange-100 rounded-full dark:bg-orange-900 dark:text-orange-300">
-                            8
+                            <%=totalPending  %>
                         </span>
                     </div>
                 </a>
@@ -124,7 +124,7 @@
                         </p>
                         <span
                             class="inline-flex items-center justify-center w-8 h-8 mt-2 text-sm font-medium text-green-600 bg-green-100 rounded-full dark:bg-green-900 dark:text-green-300">
-                            15
+                            <%=totalApproved  %>
                         </span>
                     </div>
                 </a>
