--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -146,14 +146,14 @@
                     </div>
                 </a>
 
-                <a href="/bookings/cancelled" class="block">
+                <a href="/bookings/allBookings" class="block">
                     <div
                         class="flex flex-col items-center justify-center px-4 py-6 rounded bg-gray-50 dark:bg-gray-800">
                         <p class="text-md font-semibold text-gray-600 dark:text-black flex items-center gap-2">
-                            <i class="ri-close-circle-line text-red-700 pr-3 text-xl"></i> Cancelled Meeting
+                            <i class="ri-history-line text-gray-400 pr-3 text-xl"></i> Booking History
                         </p>
                         <span
-                            class="inline-flex items-center justify-center w-8 h-8 mt-2 text-sm font-medium text-red-700 bg-red-100 rounded-full dark:bg-red-900 dark:text-red-300">
+                            class="inline-flex items-center justify-center w-8 h-8 mt-2 text-sm font-medium text-gray-400 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-200">
                             20
                         </span>
                     </div>
