--- a/views/pages/showUsers.ejs
+++ b/views/pages/showUsers.ejs
@@ -106,7 +106,7 @@
 
 
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-                <div class="flex justify-center items-center pb-4 bg-white dark:bg-gray-900">
+                <div class="flex justify-center items-ceter pb-4 bg-white dark:bg-gray-900">
                     <label for="table-search" class="sr-only">Search</label>
                     <div class="relative">
                         <div class="absolute inset-y-0 left-0 flex items-center ps-3 pointer-events-none">
