--- a/views/pages/pending.ejs
+++ b/views/pages/pending.ejs
@@ -129,7 +129,7 @@
                             </th>
                         </tr>
                     </thead>
-                    <% for (let booking of bookings) {%>
+                    <% for (let booking of pendingBookings) {%>
                     <tbody>
                         <tr
                         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 cursor-pointer"
