--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -154,7 +154,7 @@
                         </p>
                         <span
                             class="inline-flex items-center justify-center w-8 h-8 mt-2 text-sm font-medium text-gray-400 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-200">
-                            20
+                            <%=totalbookings  %>
                         </span>
                     </div>
                 </a>
