--- a/views/pages/pending.ejs
+++ b/views/pages/pending.ejs
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="#"
+                    <a href="/bookings/analytics"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-line-chart-line"></i>
                         <span class="ms-3">Analytics</span>
@@ -147,12 +147,10 @@
                         <td class="px-6 py-4">
                             <%= booking.fullname %>
                         </td>
-                        <td class="px-6 py-4 text-right">
-                            <a href="#"
-                               class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                        <td class="px-6 py-4 text-right">                            
                         </td>
                     </tr>
-                                        </tbody>
+                </tbody>
                     <% } %>
                 </table>
             </div>
