--- a/views/pages/showUsers.ejs
+++ b/views/pages/showUsers.ejs
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="/bookings/analytics"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-line-chart-line"></i>
                         <span class="ms-3">Analytics</span>
