--- a/views/pages/approved.ejs
+++ b/views/pages/approved.ejs
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="#"
+                    <a href="/bookings/analytics"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-line-chart-line"></i>
                         <span class="ms-3">Analytics</span>
@@ -125,8 +125,8 @@
                                 Client
                             </th>
                             <th scope="col" class="px-6 py-3">
-                                <span class="sr-only">Edit</span>
                             </th>
+
                         </tr>
                     </thead>
                     <% for (let booking of bookings) {%>
@@ -146,6 +146,8 @@
                             <td class="px-6 py-4">
                                 <%= booking.fullname  %>
                             </td>
+                            <td class="px-6 py-4 text-right">                            
+                            </td>    
                         </tr>
                     </tbody>
                     <% } %>
