--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,15 +37,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <i class="ri-notification-3-line"></i>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Notifications</span>
-                        <span
-                            class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
-                    </a>
-                </li>
-                <li>
                     <a href="/bookings/allUsers"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-group-line"></i>
@@ -165,7 +156,7 @@
 
                 <!-- Appointment Chart (left side) -->
                 <div class="flex items-center justify-center w-full h-96 mb-4 rounded bg-gray-50 dark:bg-gray-800">
-                    <canvas id="appointmentChart" class="w-full h-full"></canvas>
+                    <canvas id="bookingBarChart" class="w-full h-full"></canvas>
                 </div>
 
                 <!-- Line Chart (right side) -->
