--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/styles/form.css">
+    <link rel="stylesheet" href="/styles/analytics.css">
     <link rel="stylesheet" href="/styles/index.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link crossorigin="anonymous" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">    
